--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
 	"private": true,
 	"scripts": {
+		"dev:server": "node server.js",
 		"build": "next build",
 		"dev": "next dev --turbo",
 		"start": "next start",
 		"lint": "next lint",
-		"prettier": "prettier --write ."
+		"upgradePnpm": "pnpm add -g pnpm",
+		"upgrade": "pnpm add -g pnpm && pnpm update",
+		"format": "prettier --write .",
+		"lint:fix": "eslint --fix .",
+		"format:fix": "prettier --write . && eslint --fix . && pnpm run lint:fix"
 	},
 	"dependencies": {
 		"@heroicons/react": "^2.2.0",
@@ -21,6 +26,8 @@
 		"postgres": "^3.4.5",
 		"react": "19.0.0-rc-cd22717c-20241013",
 		"react-dom": "19.0.0-rc-cd22717c-20241013",
+		"socket.io": "^4.8.1",
+		"socket.io-client": "^4.8.1",
 		"tailwindcss": "3.4.15",
 		"typescript": "5.7.2",
 		"use-debounce": "^10.0.4",
