--- a/package.json
+++ b/package.json
@@ -38,6 +38,14 @@
 		"overrides": {
 			"@types/react": "npm:types-react@19.0.0-rc.1",
 			"@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
-		}
+		},
+		"onlyBuiltDependencies": [
+			"bcrypt"
+		],
+		"ignoredBuiltDependencies": [
+			"bufferutil",
+			"sharp",
+			"utf-8-validate"
+		]
 	}
 }
