--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.2",
 		"@types/node": "22.10.1",
+		"@types/pg": "^8.11.11",
 		"@types/react": "npm:types-react@19.0.0-rc.1",
 		"@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
 		"eslint": "^9",
