--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 		"dev": "next dev --turbo",
 		"start": "next start",
 		"lint": "next lint",
-		"prettier": "prettier --write ."
+		"prettier": "prettier --write ./app/"
 	},
 	"dependencies": {
 		"@heroicons/react": "^2.2.0",
