--- a/package.json
+++ b/package.json
@@ -14,17 +14,19 @@
 		"autoprefixer": "10.4.20",
 		"bcrypt": "^5.1.1",
 		"clsx": "^2.1.1",
+		"immer": "^10.1.1",
 		"next": "^15.1.7",
 		"next-auth": "5.0.0-beta.25",
 		"pg": "latest",
 		"postcss": "8.4.49",
 		"postgres": "^3.4.5",
-		"react": "19.0.0-rc-cd22717c-20241013",
-		"react-dom": "19.0.0-rc-cd22717c-20241013",
+		"react": "19.1.0",
+		"react-dom": "19.1.0",
 		"tailwindcss": "3.4.15",
 		"typescript": "5.7.2",
 		"use-debounce": "^10.0.4",
-		"zod": "^3.23.8"
+		"zod": "^3.23.8",
+		"zustand": "5.0.5"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.2",
