--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 	"dependencies": {
 		"@heroicons/react": "^2.2.0",
 		"@tailwindcss/forms": "^0.5.9",
+		"@tanstack/react-query": "^5.80.3",
+		"@tanstack/react-query-devtools": "^5.80.3",
 		"@vercel/postgres": "^0.10.0",
 		"autoprefixer": "10.4.20",
 		"bcrypt": "^5.1.1",
@@ -29,6 +31,7 @@
 		"zustand": "5.0.5"
 	},
 	"devDependencies": {
+		"@tanstack/eslint-plugin-query": "^5.78.0",
 		"@types/bcrypt": "^5.0.2",
 		"@types/node": "22.10.1",
 		"@types/pg": "^8.11.11",
