--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
 		"dev": "next dev --turbo",
 		"start": "next start",
 		"lint": "next lint",
-		"format": "prettier --write .",
-		"lint:fix": "eslint --fix .",
-		"format:fix": "prettier --write . && eslint --fix . && pnpm run lint:fix"
+		"format": "npx prettier --write .",
+		"lint:fix": "npx eslint --fix .",
+		"format:fix": "npx prettier --write . && npx eslint --fix . && pnpm run lint:fix"
 	},
 	"dependencies": {
+		"@eslint/js": "^9.28.0",
 		"@heroicons/react": "^2.2.0",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tanstack/react-query": "^5.80.3",
@@ -19,10 +20,12 @@
 		"autoprefixer": "10.4.20",
 		"bcrypt": "^5.1.1",
 		"clsx": "^2.1.1",
+		"eslint-plugin-react": "^7.37.5",
+		"globals": "^16.2.0",
 		"immer": "^10.1.1",
 		"next": "^15.1.7",
 		"next-auth": "5.0.0-beta.25",
-		"pg": "latest",
+		"pg": "8.16.0",
 		"postcss": "8.4.49",
 		"postgres": "^3.4.5",
 		"react": "19.1.0",
@@ -32,6 +35,7 @@
 		"tailwindcss": "3.4.15",
 		"typescript": "5.7.2",
 		"use-debounce": "^10.0.4",
+		"winston": "^3.17.0",
 		"zod": "^3.23.8",
 		"zustand": "5.0.5"
 	},
@@ -56,7 +60,9 @@
 		"ignoredBuiltDependencies": [
 			"bufferutil",
 			"sharp",
+			"unrs-resolver",
 			"utf-8-validate"
 		]
-	}
+	},
+	"packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
 }
