--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@eslint/js": "^9.30.1",
 		"@heroicons/react": "^2.2.0",
+		"@prisma/client": "^6.11.1",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tanstack/react-query": "^5.81.5",
 		"@tanstack/react-query-devtools": "^5.81.5",
@@ -28,6 +29,7 @@
 		"pg": "8.16.0",
 		"postcss": "8.4.49",
 		"postgres": "^3.4.7",
+		"prisma": "^6.11.1",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
 		"socket.io": "^4.8.1",
