--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@eslint/js": "^9.30.1",
 		"@heroicons/react": "^2.2.0",
 		"@prisma/client": "^6.11.1",
+		"@reduxjs/toolkit": "^2.8.2",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tanstack/react-query": "^5.81.5",
 		"@tanstack/react-query-devtools": "^5.81.5",
@@ -32,6 +33,7 @@
 		"prisma": "^6.11.1",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
+		"react-redux": "^9.2.0",
 		"socket.io": "^4.8.1",
 		"socket.io-client": "^4.8.1",
 		"tailwindcss": "3.4.15",
@@ -66,5 +68,5 @@
 			"utf-8-validate"
 		]
 	},
-	"packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
+	"packageManager": "pnpm@10.12.4"
 }
