--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
 		"lint": "next lint",
 		"format": "npx prettier --write .",
 		"lint:fix": "npx eslint --fix .",
-		"format:fix": "npx prettier --write . && npx eslint --fix . && pnpm run lint:fix"
+		"format:fix": "npx prettier --write . && npx eslint --fix . && pnpm run lint:fix",
+		"db:init": "tsx app/lib/dbClients/scripts/init-db.ts",
+		"db:seed": "tsx app/lib/dbClients/scripts/seed-only.ts",
+		"db:reset": "tsx app/lib/dbClients/scripts/reset-db.ts"
 	},
 	"dependencies": {
 		"@eslint/js": "^9.30.1",
@@ -25,6 +28,7 @@
 		"eslint-plugin-react": "^7.37.5",
 		"globals": "^16.3.0",
 		"immer": "^10.1.1",
+		"mongodb": "^6.17.0",
 		"next": "^15.3.4",
 		"next-auth": "5.0.0-beta.25",
 		"pg": "8.16.0",
@@ -50,8 +54,10 @@
 		"@types/pg": "^8.15.4",
 		"@types/react": "npm:types-react@19.0.0-rc.1",
 		"@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+		"dotenv": "^16.6.1",
 		"eslint": "^9.30.1",
-		"eslint-config-next": "15.1.7"
+		"eslint-config-next": "15.1.7",
+		"tsx": "^4.0.0"
 	},
 	"pnpm": {
 		"overrides": {
