--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"eslint-plugin-react": "^7.37.5",
 		"globals": "^16.3.0",
 		"immer": "^10.1.1",
+		"jsonwebtoken": "^9.0.2",
 		"mongodb": "^6.17.0",
 		"next": "^15.3.4",
 		"next-auth": "5.0.0-beta.25",
