--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"globals": "^16.3.0",
 		"immer": "^10.1.1",
 		"jsonwebtoken": "^9.0.2",
+		"lucide-react": "^0.525.0",
 		"mongodb": "^6.17.0",
 		"next": "^15.4.2",
 		"next-auth": "5.0.0-beta.25",
@@ -39,6 +40,7 @@
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
 		"react-redux": "^9.2.0",
+		"recharts": "^3.1.0",
 		"socket.io": "^4.8.1",
 		"socket.io-client": "^4.8.1",
 		"tailwindcss": "3.4.15",
@@ -75,5 +77,5 @@
 			"utf-8-validate"
 		]
 	},
-	"packageManager": "pnpm@10.12.4"
+	"packageManager": "pnpm@10.13.1"
 }
